--- a/about.html
+++ b/about.html
@@ -21,13 +21,15 @@
 
     <!-- task 1: update the company name.-->
     <h1 class="header">
-      About [Company Name]
+      About Flatiron
     </h1>
     
     <!-- task 2: include a few facts about the company. Try making this an unordered list!-->
-    <p>
-      What [company name] does:
-    </p>
+    <ul>
+      What [flatiron] does;
+      <li> </li>
+      <li></li>
+    </ul>
 
 
     <h1 class="header">
@@ -35,11 +37,11 @@
     </h1>
     <!-- task 3: write a short bio about yourself on the about page.-->
     <p>
-      Some things to know about me:
+      Some things to know about me: Hi my name is farida. im 16 years old and  live in the Bronx. Im a cancer and i have a low social battery
     </p>
 
     <!-- task 4: include an image that represents something about you - this could be a picture of yourself, an interest of yours, or maybe some art you created!.-->
-    <img src=" ">
+    <img src="https://cdn.britannica.com/39/19239-050-DA406938/Clarinet.jpg">
   </div>
 
   <script src="script.js"></script>
