--- a/portfolios.html
+++ b/portfolios.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width">
   <title>FLW1 Class Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +34,7 @@
       <a href=" " target="_blank">
         <img
           src="https://cdn.glitch.com/3f130f92-c599-4005-ae95-c6cd19387185%2Fprofile-placeholder.png?v=1590605956908">
-        <h3>Student Name</h3>
+        <h3>Farida</h3>
       </a>
     </div>
 
