--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
 
     <!-- task 8: update this with your program information -->
     <!-- Unsure of the program manager's name and contact info? Ask them :) -->
-    <p> The Fellowship at [Company Name] is managed by [PM Name].</p>
-    <p> You can reach them at [email]@codenation.org.
+    <p> The Fellowship at [Flatiron Health] is managed by [Karla].</p>
+    <p> You can reach them at [karla.pinzon]@codenation.org.
     </p>
 
     <h1 class="header">
@@ -44,7 +44,7 @@
     </h1>
 
     <!-- task 9: add your contact information, including your: GitHub account, email address, LinkedIn (if you already have one), and resume (if you already have one).-->
-    <p> You can reach me at [email].</p>
+    <p> You can reach me at [mohammedfarida230@gmail.com].</p>
 
   </div>
 
