--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>FLW1 Class Portfolio</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-</head>
+ <style>
+   .menu {
+     display: flex;
+     justify-content: space-around;
+   }</style>
 
 <body>
   <div class="navBar">
